--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -21,9 +21,7 @@ group :test do
   gem 'cucumber-rails-training-wheels'
   gem 'simplecov', :require => false
 end
-group :production do
-  gem 'pg'
-end
+gem 'pg', '~> 0.20'
 
 # Gems used only for assets and not required
 # in production environments by default.
